--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "- mochilas\r - portapasaportes\r - necesers\r - organizadores de valija\r - riñoneras\r - fundas\r - valija\r - almohadas",
   "main": "app.js",
   "scripts": {
+    "start": "node src/app",
+    "dev": "npx nodemon src/app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,7 +22,8 @@
   "homepage": "https://github.com/Fondi99/grupo_9_FlyFeet#readme",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "method-override": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
